fixed centered content-wrapper with gap between sidebar and main

--- a/style.css
+++ b/style.css
@@ -107,18 +107,18 @@ main {
 
 .content-wrapper {
     display: grid;
-    grid-template-columns: 500px 1fr;
-    gap: 2rem;
+    grid-template-columns: 250px 1fr;
+    gap: 0.5rem;
     max-width: 1200px;
     margin: 2rem auto;
-    background-color: white;
+    padding: 2rem;
+
 }
 
-.main-content {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    margin: 0;
+.main-content, 
+.sidebar {
+    background-color: white;
+    padding: 1rem;
 }
 
 .sidebar {
@@ -143,10 +143,17 @@ main {
     border-bottom: 2px solid rgb(87, 136, 87);
 }
 
+.main-content {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 0;
+}
+
 .hero > div img {
     object-fit: contain;
     width: 100%;
-    border-radius: 7px;
+    border-radius: 3px;
 }
 
 #hero-section {
